fix: scrollbar and text

--- a/src/blocks/footer/__icon/footer__icon.css
+++ b/src/blocks/footer/__icon/footer__icon.css
@@ -1,5 +1,10 @@
 .footer__icon {
   display: block;
+  transition: all 0.3s ease 0s;
+}
+
+.footer__icon:hover {
+  opacity: 0.7;
 }
 
 .icon_type_instagram {
