--- a/src/blocks/research/__answer/research__answer.css
+++ b/src/blocks/research/__answer/research__answer.css
@@ -1,4 +1,5 @@
 .lbl-jobtype {
+  cursor: pointer;
   padding: 5px 10px;
   border: 2px solid rgb(1, 52, 234);
   border-radius: 10%;
